--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </head>
   <body>
     <!-- Main Content -->
-    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+    <main class="max-w-screen-xl mx-auto px-5">
       <!-- Header -->
-      <header class="flex pt-10 mb-20">
+      <header class="lg:flex pt-10 mb-20 gap-20">
         <!-- text content -->
         <div>
           <h1 class="text-5xl md:text-7xl">
@@ -50,12 +50,11 @@
             Explore More
             <i class="fa-solid fa-arrow-right -rotate-45 text-sm"></i>
           </button>
-        </div class="relative">
+        </div>
 
         <!-- image content -->
-        <div>
+        <div class="relative">
           <!-- image -->
-
           <div>
             <img
               src="./tea-house-resources/images/banner.png"
@@ -63,17 +62,102 @@
               alt=""
             />
             <!-- card -->
-            <div class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-290 lg:top-97">
-            <!-- icon -->
-            <div><i class="fa-solid fa-star text-2xl text-amber-500"></i></div>
-            <!-- text -->
-            <div class="ml-2">
-              <h2 class="lg:text-2xl font-bold">5.00</h2>
-              <p class="text-gray-500">Trust Pilot Rating</p>
+            <div
+              class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg md:top-80 md:left-32 lg:left-28 lg:top-97 top-47"
+            >
+              <!-- icon -->
+              <div>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+              </div>
+              <!-- text -->
+              <div class="ml-2">
+                <h2 class="lg:text-2xl font-bold">5.00</h2>
+                <p class="text-gray-500">Trust Pilot Rating</p>
+              </div>
             </div>
           </div>
         </div>
       </header>
+
+      <!-- products section -->
+      <section class="lg:py-24">
+        <!-- title -->
+        <div class="text-center">
+          <h1 class="font-bold text-3xl md:text-4xl mb-5">
+            Our Featured Products
+          </h1>
+          <p class="text-gray-600 mx-auto">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+
+        <!-- grid card -->
+        <div class="grid lg:grid-cols-4 gap-5 text-center pt-10">
+          <!-- product card -->
+          <div class="overflow-hidden rounded-lg shadow-lg bg-gray-50">
+            <!-- image -->
+            <img
+              src="./tea-house-resources/images/tea-1.png"
+              class="mx-auto pt-4 pb-4"
+              alt=""
+            />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Milk Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+
+          <div class="overflow-hidden rounded-lg shadow-lg bg-gray-50">
+            <!-- image -->
+            <img
+              src="./tea-house-resources/images/tea-2.png"
+              class="mx-auto pt-4 pb-4"
+              alt=""
+            />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Black Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+
+          <div class="overflow-hidden rounded-lg shadow-lg bg-gray-50">
+            <!-- image -->
+            <img
+              src="./tea-house-resources/images/tea-3.png"
+              class="mx-auto pt-4 pb-4"
+              alt=""
+            />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Lemon Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+
+          <div class="overflow-hidden rounded-lg shadow-lg bg-gray-50">
+            <!-- image -->
+            <img
+              src="./tea-house-resources/images/tea-4.png"
+              class="mx-auto pt-4 pb-4"
+              alt=""
+            />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Green Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
