--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <section class="lg:py-24">
         <!-- title -->
         <div class="text-center">
-          <h1 class="font-bold text-3xl md:text-4xl mb-5">
+          <h1 class="font-bold text-3xl md:text-5xl mb-5">
             Our Featured Products
           </h1>
           <p class="text-gray-600 mx-auto">
@@ -95,7 +95,7 @@
         </div>
 
         <!-- grid card -->
-        <div class="grid lg:grid-cols-4 gap-5 text-center pt-10">
+        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-5 text-center pt-10">
           <!-- product card -->
           <div class="overflow-hidden rounded-lg shadow-lg bg-gray-50">
             <!-- image -->
@@ -158,6 +158,62 @@
           </div>
         </div>
       </section>
+
+      <!-- about section -->
+      <section class="py-10 md:py-0">
+        <div class="grid lg:grid-cols-2 grid-cols-1 gap-4">
+          <!-- left -->
+          <div class="grid grid-cols-2 grid-rows-3 gap-6 pb-5">
+            <div
+              class="bg-gradient-to-r from-red-100 to-red-50 rounded-xl row-span-1"
+            ></div>
+            <div class="bg-orange-50 rounded-xl row-span-2">
+              <img
+                src="./tea-house-resources/images/fresh-1.png"
+                alt=""
+                class="mx-auto my-5"
+              />
+            </div>
+            <div class="bg-stone-100 rounded-xl row-span-2">
+              <img
+                src="./tea-house-resources/images/fresh-2.png"
+                alt=""
+                class="mx-auto my-5"
+              />
+            </div>
+            <div
+              class="bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl"
+            ></div>
+          </div>
+          <!-- right -->
+          <div>
+            <h1 class="font-bold text-3xl lg:text-5xl pb-2">
+              Great Tea, Freshly Presented
+            </h1>
+            <p class="text-gray-700">
+              The meaning of gong cha is chanese is to provide the best tea to
+              emperor from all possessions . It represents the highest quality
+              and self expectation. Establishing in 2006, Gong cha had been
+              deeply appreciated by its custoers because of good words of mouth
+              and unique customized service orginated from Taiwan.
+            </p>
+            <br />
+            <h3 class="font-bold text-2xl pb-2">Unique Taste</h3>
+            <p class="text-gray-700">
+              A Unique and different style from other teapots gives a luxurious
+              and minimalist impression
+            </p>
+            <br />
+            <h3 class="font-bold text-2xl pb-2">Premium Quality</h3>
+            <p class="text-gray-700">
+              Premium Quality that makes tea more elegant and more durable when
+              you use it.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      
     </main>
   </body>
 </html>
