--- a/index.html
+++ b/index.html
@@ -213,7 +213,99 @@
         </div>
       </section>
 
-      
+      <!-- contact section -->
+      <section>
+        <div
+          class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16"
+        >
+          <!-- text section -->
+          <div class="flex flex-col justify-center items-center">
+            <div class="w-5/6">
+              <h1 class="text-5xl font-bold mb-5 mt-10">
+                Meet Our Super Clients
+              </h1>
+              <p class="mb-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable.
+              </p>
+              <button
+                class="bg-white text-orange-700 px-3 py-2 rounded-lg font-bold"
+              >
+                Show All
+              </button>
+            </div>
+          </div>
+
+          <!-- review -->
+          <div class="relative py-24">
+            <!-- top card -->
+            <div
+              class="relative h-56 bg-white text-back rounded-lg w-full md:w-3/4 flex items-center pl-6 pt-6 md:pl-10 md:pt-5 opacity-40 md:left-35"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img
+                  src="./tea-house-resources/images/client.png"
+                  alt=""
+                  class="p-1"
+                />
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <h1 class="font-bold text-gray-900">Ilham Yuda</h1>
+                <small class="font-bold text-gray-500">Businessman</small>
+              </div>
+            </div>
+            <!-- bottom card -->
+            <div
+              class="relative h-56 bg-white text-back rounded-lg w-full md:w-3/4 flex items-center pl-6 pt-6 md:pl-10 md:pt-5 top-10 opacity-40 md:left-35"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full top">
+                <img
+                  src="./tea-house-resources/images/client.png"
+                  alt=""
+                  class="p-1"
+                />
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <h1 class="font-bold text-gray-900">Ilham Yuda</h1>
+                <small class="font-bold text-gray-500">Businessman</small>
+              </div>
+            </div>
+
+            <!-- middle class -->
+            <div class="absolute top-20">
+              <div
+                class="relative h-56 bg-white text-back rounded-lg w-full md:w-3/4 flex items-center pl-6 pt-6 md:pl-10 md:pt-5 md:left-3 top-35"
+              >
+                <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                  <img
+                    src="./tea-house-resources/images/client.png"
+                    alt=""
+                    class="p-1"
+                  />
+                </div>
+                <div>
+                  <p class="text-gray-500 mb-5">
+                    We are providing the best and suitable home insurance
+                    services for the people who are interested to treatment
+                  </p>
+                  <h1 class="font-bold text-gray-900">Ilham Yuda</h1>
+                  <small class="font-bold text-gray-500">Businessman</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
