--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body class="font-manrope">
     <!-- Main Content -->
-     
+
     <main class="max-w-screen-xl mx-auto px-5">
       <!-- Header -->
       <header class="lg:flex pt-10 mb-20 gap-20">
@@ -307,6 +307,58 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- news and events -->
+      <section>
+        <div class="flex flex-col items-center text-center py-10 gap-6">
+          <h1 class="font-bold text-3xl">News & Events</h1>
+          <p class="text-gray-600">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+
+        <!-- card -->
+        <div class="md:flex md:justify-center md:gap-5 md:mb-10">
+          <div
+            class="border-1 border-gray-200 rounded-xl p-5 flex flex-col justify-center gap-5 my-6 md:my-0"
+          >
+            <img src="./tea-house-resources/images/news-1.png" alt="" />
+            <h3 class="text-gray-500">Feb 05, 2025</h3>
+            <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+            <p class="text-gray-600">
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <h3 class="font-bold">Learn More</h3>
+          </div>
+
+          <div
+            class="border-1 border-gray-200 rounded-xl p-5 flex flex-col justify-center gap-5 my-6 md:my-0"
+          >
+            <img src="./tea-house-resources/images/news-2.png" alt="" />
+            <h3 class="text-gray-500">Feb 05, 2025</h3>
+            <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+            <p class="text-gray-600">
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <h3 class="font-bold">Learn More</h3>
+          </div>
+
+          <div
+            class="border-1 border-gray-200 rounded-xl p-5 flex flex-col justify-center gap-5 my-6 md:my-0"
+          >
+            <img src="./tea-house-resources/images/news-3.png" alt="" />
+            <h3 class="text-gray-500">Feb 05, 2025</h3>
+            <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+            <p class="text-gray-600">
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <h3 class="font-bold">Learn More</h3>
           </div>
         </div>
       </section>
