--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             />
             <!-- card -->
             <div
-              class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg md:top-80 md:left-32 lg:left-28 lg:top-97 top-47"
+              class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg md:top-142 md:left-50 lg:left-28 lg:top-97 top-47"
             >
               <!-- icon -->
               <div>
@@ -84,7 +84,7 @@
       </header>
 
       <!-- products section -->
-      <section class="lg:py-24">
+      <section class="md:py-20">
         <!-- title -->
         <div class="text-center">
           <h1 class="font-bold text-3xl md:text-5xl mb-5">
@@ -218,7 +218,7 @@
       </section>
 
       <!-- contact section -->
-      <section>
+      <section class="md:py-10">
         <div
           class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16"
         >
