social media added

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
             <!-- icon -->
             <div
-              class="flex md:justify-self-end justify-self-auto w-3/5 mb-2 mt-9"
+              class="flex md:justify-self-start justify-self-auto w-3/5 mb-2 mt-9"
             >
               <i class="fa-brands fa-facebook text-2xl"></i>
               <i class="fa-brands fa-twitter text-2xl ml-5"></i>
