--- a/index.html
+++ b/index.html
@@ -416,16 +416,19 @@
             <h4 class="font-bold mb-3.5 text-4xl">
               Subscribe to our newsletter
             </h4>
-            <input
-              type="text"
-              placeholder="Email address"
-              class="md:w-4/6 bg-transparent border-b-2 border-gray-600 px-3 py-2"
-            />
-            <button>
-              <i
-                class="fa-solid fa-chevron-right bg-orange-600 md:h-10 md:w-10 w-7 h-7 md:rounded-full text-white inline-flex items-center justify-center md:pt-3 pt-1.5 ml-18 mt-1 rounded-xl"
-              ></i>
-            </button>
+
+            <div class="flex">
+              <input
+                type="text"
+                placeholder="Email address"
+                class="bg-transparent border-b-2 border-gray-600 py-2"
+              />
+              <button>
+                <i
+                  class="fa-solid fa-chevron-right bg-orange-600 md:h-10 md:w-10 w-7 h-7 md:rounded-full text-white inline-flex items-center justify-center md:pt-3 pt-1.5 mt-1 rounded-full"
+                ></i>
+              </button>
+            </div>
 
             <!-- icon -->
             <div
